--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,6 @@ services:
       - key: CORS_ORIGINS
         sync: false
       - key: ACCESS_TOKEN_EXPIRE_MINUTES
-        value: 15
+        value: "15"
       - key: REFRESH_TOKEN_EXPIRE_DAYS
-        value: 30
+        value: "30"
